tests/baselines/reference/scopeCheckExtendedClassInsidePublicMethod2.errors.txt
==== tests/cases/compiler/scopeCheckExtendedClassInsidePublicMethod2.ts (2 errors) ====
    class C { private v; public p; static s; }
    class D extends C {
       public c() {
          v = 1;
          ~
!!! scopeCheckExtendedClassInsidePublicMethod2.ts(4,7): error TS2095: Could not find symbol 'v'.
          this.p = 1;
          s = 1;
          ~
!!! scopeCheckExtendedClassInsidePublicMethod2.ts(6,7): error TS2095: Could not find symbol 's'.
       }
    }